--- a/homework1/assets/css/homework1.css
+++ b/homework1/assets/css/homework1.css
@@ -18,13 +18,7 @@
     width: 16px;
 }
 
-label.no-bold {
-    font-weight: normal !important;
-}
-
-/* TODO is this really needed? */
-/* TODO rename to -middle */
-.vertical-align-center {
+.vertical-align-middle {
     display: flex;
     align-items: center;
 }
