--- a/homework3/app/views/product.html
+++ b/homework3/app/views/product.html
@@ -28,13 +28,13 @@
             </ol>
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="images/promo-product-1.jpg" alt="ABC Auction Deals" class="img-responsive center-block">
+                    <img src="images/01-1.jpg" alt="ABC Auction Deals" class="img-responsive center-block">
                 </div>
                 <div class="item">
-                    <img src="images/promo-product-2.jpg" alt="ABC Auction Deals" class="img-responsive center-block">
+                    <img src="images/01-2.jpg" alt="ABC Auction Deals" class="img-responsive center-block">
                 </div>
                 <div class="item">
-                    <img src="images/promo-product-3.jpg" alt="ABC Auction Deals" class="img-responsive center-block">
+                    <img src="images/01-3.jpg" alt="ABC Auction Deals" class="img-responsive center-block">
                 </div>
             </div>
 
@@ -114,13 +114,13 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img src="images/promo-product-1.jpg" alt="ABC Auction Deals" class="img-responsive center-block">
+                        <img src="images/01-1.jpg" alt="ABC Auction Deals" class="img-responsive center-block">
                     </div>
                     <div class="item">
-                        <img src="images/promo-product-2.jpg" alt="ABC Auction Deals" class="img-responsive center-block">
+                        <img src="images/01-2.jpg" alt="ABC Auction Deals" class="img-responsive center-block">
                     </div>
                     <div class="item">
-                        <img src="images/promo-product-3.jpg" alt="ABC Auction Deals" class="img-responsive center-block">
+                        <img src="images/01-3.jpg" alt="ABC Auction Deals" class="img-responsive center-block">
                     </div>
                 </div>
 
@@ -212,13 +212,13 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img src="images/promo-product-1.jpg" alt="ABC Auction Deals" class="img-responsive center-block">
+                        <img src="images/01-1.jpg" alt="ABC Auction Deals" class="img-responsive center-block">
                     </div>
                     <div class="item">
-                        <img src="images/promo-product-2.jpg" alt="ABC Auction Deals" class="img-responsive center-block">
+                        <img src="images/01-2.jpg" alt="ABC Auction Deals" class="img-responsive center-block">
                     </div>
                     <div class="item">
-                        <img src="images/promo-product-3.jpg" alt="ABC Auction Deals" class="img-responsive center-block">
+                        <img src="images/01-3.jpg" alt="ABC Auction Deals" class="img-responsive center-block">
                     </div>
                 </div>
 
@@ -248,6 +248,7 @@
                 <div class="col-xs-6">Current Price</div>
             </div>
 
+            <!-- TODO use <span class="badge"> ? -->
             <div class="row col-xs-offset-1 pb-20">
                 <div class="col-xs-6"><strong>[5 bids]</strong></div>
                 <div class="col-xs-6">Time left {{ctrl.product.timeleft}}h</div>
